Swapped List.getFirst() for backwards compatible List.get(0)